<resources>
    <string name="app_name">BLETools</string>
    <string name="about_title">About</string>
    <string name="about_version_format">%1$s v%2$s (%3$d)</string>
    <string name="about_language">Language</string>
    <string name="about_language_english">English</string>
    <string name="about_language_chinese">中文</string>
    <string name="about_diagnostic_log">Diagnostic log:</string>
    <string name="close">Close</string>
    <string name="ble_connect">BLE_Connect</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="numeric_low_threshold">Low Threshold (mm)</string>
    <string name="numeric_high_threshold">High Threshold (mm)</string>
    <string name="numeric_report_period">Report Period (min)</string>
    <string name="numeric_gps_period">GPS Period (min)</string>
    <string name="range_low_threshold_mm">30-4500</string>
    <string name="range_high_threshold_mm">0, 30-4500</string>
    <string name="range_report_period_minutes">1-1440</string>
    <string name="range_svc_report_period_minutes">0, 1-1440</string>
    <string name="range_gps_period_minutes">0, 10-1440</string>
    <string name="range_stable_time_seconds">1-255</string>
    <string name="stable_time_hint">Used by stable-time port modes</string>
    <string name="output_voltage">Output Voltage</string>
    <string name="port_function">Port Function</string>
    <string name="stable_time">Stable Time (s)</string>
    <string name="power_mode">Power Mode</string>
    <string name="timezone">Timezone</string>
    <string name="realtime_task">Real-time</string>
    <string name="timed_task">Timed</string>
    <string name="valve">Valve</string>
    <string name="state">State</string>
    <string name="time_seconds">Time (s)</string>
    <string name="time_range">Time Range</string>
    <string name="range_task_time_seconds">0-65535 s</string>
    <string name="range_task_pulse">0-65535</string>
    <string name="pulse">Pulse</string>
    <string name="task_number">Task</string>
    <string name="repeat">Repeat</string>
    <string name="delete">Delete</string>
    <string name="invalid_time_range">Select a valid time range</string>
    <string name="detection_mode">Detection Mode</string>
    <string name="save_settings">Save Settings</string>
    <string name="parking_status_vacant">Vacant</string>
    <string name="parking_status_occupied">Occupied</string>
    <string name="parking_status_covered">Covered</string>
    <string name="parking_status_unknown">Unknown</string>
    <string name="overflow_state_normal">Normal</string>
    <string name="overflow_state_low_threshold">Low threshold triggered</string>
    <string name="overflow_state_high_threshold">High threshold triggered</string>
    <string name="overflow_state_invalid">Invalid</string>
    <string name="parking_mode_fusion">Magnetic + Radar</string>
    <string name="parking_mode_magnetic_only">Magnetic Only</string>
    <string name="parking_mode_radar_priority">Radar Priority</string>
    <string name="numeric_buffeting_duration">Buffeting duration</string>
    <string name="numeric_time_seconds">Time (s)</string>
    <string name="numeric_pulse">Pulse</string>
    <string name="invalid_numeric_range">Enter a valid number for this field</string>
    <string name="manual_eui_menu_title">Input EUI</string>
    <string name="manual_eui_title">Enter DevEUI</string>
    <string name="manual_eui_hint">16-character hexadecimal DevEUI</string>
    <string name="invalid_dev_eui">Enter a 16-character hexadecimal DevEUI</string>
    <string name="target_scan_started">Waiting for the target device to be found</string>
    <string name="target_device_not_found">Target device not found</string>
    <string name="scan_complete">Scan complete (3 cycles)</string>
    <string name="todo">TODO</string>
    <string name="tap_to_scanner">Tap to scanner</string>
    <!--qrcode-->
    <string name="str_scan_title">Scan</string>
    <string name="str_scan_hint">Place the QR code in the box and scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="storage_permission_title">Storage Permission Required</string>
    <string name="storage_permission_message">Please allow access to all files to save data.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="deny">Deny</string>
    <string name="all_permissions_granted">All permissions have been granted.</string>
    <string name="critical_permissions_denied_title">Necessary Permissions Denied</string>
    <string name="critical_permissions_denied_message">Bluetooth and location permissions are required. Please go to settings to enable them.</string>
    <string name="partial_function_restricted">Some functions may be restricted.</string>
    <string name="permission_denied_log">The following permissions were not granted: %s</string>
    <string name="filter_null_names">Filter devices without names</string>
    <!-- res/values/strings.xml -->
    <string name="storage_permissions_denied_message">存储读写权限是必需权限，请前往设置开启</string>

    <string name="ble_disconnect_message">Device disconnected</string>
    <string name="ota_file_read_fail">Failed to read the OTA file</string>
    <string name="ota_file_size">File size: %1$d bytes</string>
    <string name="ota_file_name">File name: %1$s</string>
    <string name="ota_unknown_file_name">Unknown file</string>

</resources>
